--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulators ar Vēsturi</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stils.css">
+    <script src="kaukas.js"></script>
 </head>
 <body>
     <div class="calculator">
@@ -42,6 +43,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="kautkas.js"></script>
 </body>
 </html>
